# iai_pr2

./: README.md
iai_pr2/: CMakeLists.txt  package.xml
iai_pr2_bringup/: README.md  package.xml
iai_pr2_bringup/launch/: amcl_node.xml  giskardpy_add_kitchen.launch  giskardpy_with_kitchen.launch  map.launch  pr2_manipulation.launch  pr2_map_joy_amcl.launch  pr2_teleop_joy.launch  pr2_teleop_joy_ds4.launch  robot.launch  robot_with_cableguide.launch  slam_gmapping.xml
iai_pr2_bringup/maps/: pr2_apartment_map-07-09-2022.pgm  pr2_apartment_map-07-09-2022.yaml  pr2_apartment_map_raw.pgm
iai_pr2_controller_configuration/: CMakeLists.txt  package.xml  pr2_upper_body_controller.yaml  pr2_whole_body_controller.yaml
iai_pr2_controller_configuration/launch/: spawn_upper_body_controller.launch  spawn_velocity_controllers.launch  spawn_whole_body_controller.launch
iai_pr2_description/: CMakeLists.txt  package.xml
iai_pr2_description/launch/: display_pr2.launch.py  upload_pr2.launch.py  upload_pr2_cableguide.launch  upload_pr2_calibrated_with_ft2.launch  upload_pr2_with_odom_joints.launch  upload_pr2_with_odom_joints_calibrated.launch
iai_pr2_description/meshes/cableguide/: item_Profil_8_40x40_leicht_L1000.dae  item_Profil_8_40x40_leicht_L1000s.stl  item_Profil_8_40x40_leicht_L410.dae  item_Profil_8_40x40_leicht_L410s.stl  item_Profil_8_40x40_leicht_L420.dae  item_Profil_8_40x40_leicht_L420s.stl
iai_pr2_description/meshes/sensors/: microsoft_kinect2.dae
iai_pr2_description/robots/: pr2.urdf  pr2_calibrated_with_ft2.xml  pr2_calibrated_with_ft2_cableguide.xml  pr2_calibrated_with_ft2_without_virtual_joints.urdf  pr2_with_ft2_cableguide.xacro  pr2_with_odom_joints.xacro  pr2_with_odom_joints_cableguide.xacro  pr2_with_odom_joints_calibrated.xacro
iai_pr2_description/urdf/: astra.urdf.xacro
iai_pr2_donbot/: CMakeLists.txt  package.xml
iai_pr2_donbot/config/: pr2_donbot.yaml
iai_pr2_donbot/launch/: pr2_donbot_display.launch  pr2_donbot_sim.launch
iai_pr2_donbot/model/: pr2_donbot.xml
iai_pr2_donbot/model/pr2_donbot/meshes/iai_pr2/: pr2_calibrated_with_ft2_without_virtual_joints.urdf
iai_pr2_donbot/rviz_config/: rviz_config.rviz
iai_pr2_sim/: CMakeLists.txt  README.md  package.xml
iai_pr2_sim/config/: mujoco_config.yaml  mujoco_initial_joint_state.yaml  naive_kinematics_sim.yaml  naive_kinematics_sim_base.yaml  naive_kinematics_sim_combined.yaml  naive_kinematics_sim_l_gripper.yaml  naive_kinematics_sim_r_gripper.yaml  pr2_mujoco.urdf  ros_control_sim.yaml  ros_control_sim_closed_loop.yaml  ros_control_sim_moveit.yaml  ros_control_sim_mujoco.yaml  sim_config.yaml
iai_pr2_sim/launch/: fake_localization.launch  gazebo.launch  mujoco.launch  mujoco_velocity.launch  naive_kinematics_sim.launch  naive_kinematics_sim_combined.launch  pr2.launch  ros_control_sim.launch  ros_control_sim_with_base.launch  ros_control_sim_with_base_cableguide.launch
iai_pr2_sim/rosinstall/: catkin-melodic.rosinstall  catkin.rosinstall
iai_pr2_sim/script/: set_initial_joint_state.py
