<?xml version="1.0"?>
<package format="2">
  <name>iai_pr2_controller_configuration</name>
  <version>0.0.0</version>
  <description>
    Configuration files and launch-files to start the PR2 of the IAI 
    with custom low-level controllers
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- FIXME: This was uncommented to not break compilation of the simulation
              of giskard_pr2 on ROS Kinetic. The underlying problem is that the
              PR2 infrastructure has not been ported and released for ROS Kinetic.
              Once that has happened, this dependency should be uncommented. -->
  <!--depend>pr2_controller_manager</depend-->
</package>
