<package format="3">
  <name>iai_pr2_description</name>
  <version>0.0.0</version>
  <description>
    Holds urdf descriptions of the PR2 at the Institute of Artificial
    Intelligence, Universitaet Bremen, Germany.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/code-iai/iai_robots/issues</url>
  <url type="repository">https://github.com/code-iai/iai_robots</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
