<?xml version="1.0"?>
<package format="2">
  <name>iai_pr2_sim</name>
  <version>0.0.2</version>
  <description>
    A lightweight kinematics simulation of IAI's PR2 robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- TODO: add version information -->
  <depend>iai_pr2_description</depend>
  <depend>iai_naive_kinematics_sim</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>controller_manager</depend>
  <depend version_gte="1.11.2">robot_state_publisher</depend>
  <depend version_gte="0.5.13">tf2_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
